[package]
name = "rust_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
structopt = "0.3.24"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
futures = "0.3.30"
serde_json = "1.0.117"
reqwest = { version = "0.11.16", features = ["json"] }